--- a/invest_index.html
+++ b/invest_index.html
@@ -12,6 +12,15 @@
         <h1><span class="welcome-text">WELCOME TO</span> <span class="movison-text">MOVISON</span></h1>
         <p class="tagline">New Business World</p>
     </header>
+	<section id="about" style="padding: 20px; background-color: #f9f9f9;">
+		<h2>About Us</h2>
+		<p>MoViSon Invests: Your Trusted P2B Investment Partner
+
+At MoViSon Invests, we provide tailored P2B (Personal to Business) investment opportunities designed to help you grow your wealth while directly contributing to the growth of our business. Your money is invested directly into MoViSon, our business brand that operates across multiple ventures. From these ventures, we generate profits that are distributed to you based on the specific investment slot you choose.
+
+Our model ensures transparency, reliability, and consistent returns, as your investment becomes an integral part of our business growth. Whether you're looking for short-term gains or long-term wealth building, MoViSon Invests offers the perfect combination of security and profitability.
+</p>
+	</section>
     <div class="container">
         <div class="box" onclick="redirectToForm('SLOT001')">
             <div class="image-container">
